--- a/index.html
+++ b/index.html
@@ -51,34 +51,39 @@ class: center, middle, inverse, title-slide
 
 - **Zillow Observed Rent Index** _(ZORI)_
   - Mean of listed rents that fall into the 35th to 65th percentile range for all homes and apartments in a given region.
+  
+
+&lt;img src="Zillow_Wordmark_Blue_RGB lrg.png" width="25%" style="display: block; margin: auto;" /&gt;
 
 ## Historical Wins by Year by MLB Team
 
 - Pulled from **Lahman Baseball Database** using r package "Lahman".
-- Tested wins variable **lagged by 1, 2, and 3 years** to understand postponed effects of success.]
+- Tested wins variable **lagged by 1, 2, and 3 years** to understand postponed effects of success.
+
+&lt;img src="SABR_logo-square-700px.png" width="15%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 # After controlling for citywide rent prices, each additional win was associated with a **$2.25/month** rise in average rent price.
 
 .center.middle[.pull-right[ ## Results: Regression controlling for citywide rent
-<div id="ageevntbxg" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#ageevntbxg table {
+<div id="zcxifcfgub" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#zcxifcfgub table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#ageevntbxg thead, #ageevntbxg tbody, #ageevntbxg tfoot, #ageevntbxg tr, #ageevntbxg td, #ageevntbxg th {
+#zcxifcfgub thead, #zcxifcfgub tbody, #zcxifcfgub tfoot, #zcxifcfgub tr, #zcxifcfgub td, #zcxifcfgub th {
   border-style: none;
 }
 
-#ageevntbxg p {
+#zcxifcfgub p {
   margin: 0;
   padding: 0;
 }
 
-#ageevntbxg .gt_table {
+#zcxifcfgub .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -104,12 +109,12 @@ class: center, middle, inverse, title-slide
   border-left-color: #D3D3D3;
 }
 
-#ageevntbxg .gt_caption {
+#zcxifcfgub .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#ageevntbxg .gt_title {
+#zcxifcfgub .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -121,7 +126,7 @@ class: center, middle, inverse, title-slide
   border-bottom-width: 0;
 }
 
-#ageevntbxg .gt_subtitle {
+#zcxifcfgub .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -133,7 +138,7 @@ class: center, middle, inverse, title-slide
   border-top-width: 0;
 }
 
-#ageevntbxg .gt_heading {
+#zcxifcfgub .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -145,13 +150,13 @@ class: center, middle, inverse, title-slide
   border-right-color: #D3D3D3;
 }
 
-#ageevntbxg .gt_bottom_border {
+#zcxifcfgub .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#ageevntbxg .gt_col_headings {
+#zcxifcfgub .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -166,7 +171,7 @@ class: center, middle, inverse, title-slide
   border-right-color: #D3D3D3;
 }
 
-#ageevntbxg .gt_col_heading {
+#zcxifcfgub .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -186,7 +191,7 @@ class: center, middle, inverse, title-slide
   overflow-x: hidden;
 }
 
-#ageevntbxg .gt_column_spanner_outer {
+#zcxifcfgub .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -198,15 +203,15 @@ class: center, middle, inverse, title-slide
   padding-right: 4px;
 }
 
-#ageevntbxg .gt_column_spanner_outer:first-child {
+#zcxifcfgub .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#ageevntbxg .gt_column_spanner_outer:last-child {
+#zcxifcfgub .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#ageevntbxg .gt_column_spanner {
+#zcxifcfgub .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -218,11 +223,11 @@ class: center, middle, inverse, title-slide
   width: 100%;
 }
 
-#ageevntbxg .gt_spanner_row {
+#zcxifcfgub .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#ageevntbxg .gt_group_heading {
+#zcxifcfgub .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -248,7 +253,7 @@ class: center, middle, inverse, title-slide
   text-align: left;
 }
 
-#ageevntbxg .gt_empty_group_heading {
+#zcxifcfgub .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -263,15 +268,15 @@ class: center, middle, inverse, title-slide
   vertical-align: middle;
 }
 
-#ageevntbxg .gt_from_md > :first-child {
+#zcxifcfgub .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#ageevntbxg .gt_from_md > :last-child {
+#zcxifcfgub .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#ageevntbxg .gt_row {
+#zcxifcfgub .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -290,7 +295,7 @@ class: center, middle, inverse, title-slide
   overflow-x: hidden;
 }
 
-#ageevntbxg .gt_stub {
+#zcxifcfgub .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -303,7 +308,7 @@ class: center, middle, inverse, title-slide
   padding-right: 5px;
 }
 
-#ageevntbxg .gt_stub_row_group {
+#zcxifcfgub .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -317,15 +322,15 @@ class: center, middle, inverse, title-slide
   vertical-align: top;
 }
 
-#ageevntbxg .gt_row_group_first td {
+#zcxifcfgub .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#ageevntbxg .gt_row_group_first th {
+#zcxifcfgub .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#ageevntbxg .gt_summary_row {
+#zcxifcfgub .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -335,16 +340,16 @@ class: center, middle, inverse, title-slide
   padding-right: 5px;
 }
 
-#ageevntbxg .gt_first_summary_row {
+#zcxifcfgub .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#ageevntbxg .gt_first_summary_row.thick {
+#zcxifcfgub .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#ageevntbxg .gt_last_summary_row {
+#zcxifcfgub .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -354,7 +359,7 @@ class: center, middle, inverse, title-slide
   border-bottom-color: #D3D3D3;
 }
 
-#ageevntbxg .gt_grand_summary_row {
+#zcxifcfgub .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -364,7 +369,7 @@ class: center, middle, inverse, title-slide
   padding-right: 5px;
 }
 
-#ageevntbxg .gt_first_grand_summary_row {
+#zcxifcfgub .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -374,7 +379,7 @@ class: center, middle, inverse, title-slide
   border-top-color: #D3D3D3;
 }
 
-#ageevntbxg .gt_last_grand_summary_row_top {
+#zcxifcfgub .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -384,11 +389,11 @@ class: center, middle, inverse, title-slide
   border-bottom-color: #D3D3D3;
 }
 
-#ageevntbxg .gt_striped {
+#zcxifcfgub .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#ageevntbxg .gt_table_body {
+#zcxifcfgub .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -397,7 +402,7 @@ class: center, middle, inverse, title-slide
   border-bottom-color: #D3D3D3;
 }
 
-#ageevntbxg .gt_footnotes {
+#zcxifcfgub .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -411,7 +416,7 @@ class: center, middle, inverse, title-slide
   border-right-color: #D3D3D3;
 }
 
-#ageevntbxg .gt_footnote {
+#zcxifcfgub .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -420,7 +425,7 @@ class: center, middle, inverse, title-slide
   padding-right: 5px;
 }
 
-#ageevntbxg .gt_sourcenotes {
+#zcxifcfgub .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -434,7 +439,7 @@ class: center, middle, inverse, title-slide
   border-right-color: #D3D3D3;
 }
 
-#ageevntbxg .gt_sourcenote {
+#zcxifcfgub .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -442,72 +447,72 @@ class: center, middle, inverse, title-slide
   padding-right: 5px;
 }
 
-#ageevntbxg .gt_left {
+#zcxifcfgub .gt_left {
   text-align: left;
 }
 
-#ageevntbxg .gt_center {
+#zcxifcfgub .gt_center {
   text-align: center;
 }
 
-#ageevntbxg .gt_right {
+#zcxifcfgub .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#ageevntbxg .gt_font_normal {
+#zcxifcfgub .gt_font_normal {
   font-weight: normal;
 }
 
-#ageevntbxg .gt_font_bold {
+#zcxifcfgub .gt_font_bold {
   font-weight: bold;
 }
 
-#ageevntbxg .gt_font_italic {
+#zcxifcfgub .gt_font_italic {
   font-style: italic;
 }
 
-#ageevntbxg .gt_super {
+#zcxifcfgub .gt_super {
   font-size: 65%;
 }
 
-#ageevntbxg .gt_footnote_marks {
+#zcxifcfgub .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#ageevntbxg .gt_asterisk {
+#zcxifcfgub .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#ageevntbxg .gt_indent_1 {
+#zcxifcfgub .gt_indent_1 {
   text-indent: 5px;
 }
 
-#ageevntbxg .gt_indent_2 {
+#zcxifcfgub .gt_indent_2 {
   text-indent: 10px;
 }
 
-#ageevntbxg .gt_indent_3 {
+#zcxifcfgub .gt_indent_3 {
   text-indent: 15px;
 }
 
-#ageevntbxg .gt_indent_4 {
+#zcxifcfgub .gt_indent_4 {
   text-indent: 20px;
 }
 
-#ageevntbxg .gt_indent_5 {
+#zcxifcfgub .gt_indent_5 {
   text-indent: 25px;
 }
 
-#ageevntbxg .katex-display {
+#zcxifcfgub .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#ageevntbxg div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#zcxifcfgub div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
@@ -553,13 +558,17 @@ class: center, middle, inverse, title-slide
 ]
 ---
 
-# Results varied significantly from team to team. 
+# Some key takeaways 
 
-.pull-left[- Limited availability of zip code specific rent price data makes granular evaluation difficult, but team-level data shows interesting trends.
+.pull-left[
+- Rent price as a potential confounding variable; **citywide rent variable added as control** to account for noise introduced by variations in rent price.
 
 - **Strongest effect** was seen in the year immediately following a successful season.
-  
-- Large variation in rent prices from city to city introduces noise; **citywide rent variable added as control** to account for differences in rental markets.
+
+- **Limited availability of zip code specific rent price data** makes granular evaluation difficult, but team-level data shows interesting trends.
+
+- Results varied significantly from team to team; few teams independently reached statistical significant _(SDN, WAS, BAL, SDN)_
+
 ]
 
 
@@ -570,35 +579,21 @@ class: center, middle, inverse, title-slide
 
 ---
 
-
 # Potential Improvements for Future Study
 
 ## Limited availability of zip code level rent data
-- Analysis was conducted with only 149 observations, making findings difficult to verify on a city level
+- Analysis was conducted with only 149 observations, making findings difficult to verify on a team level.
+
+## Zip code not a perfect proxy for surrounding neighborhood
+- Future study could use coordinate data to establish standard geoperimeter around stadiums.]
+
+## Additional control variables may improve validity
+- Examples include population size/market size, urban development, etc.
+
+## Isolate home wins as explanatory variable
+- Are rent prices more responsive when a team is successful in their home stadium?
 
 ## 
-
-
----
-# Hosting with ghpages
-
-You can host your slides remotely on github!
-
-1. Initiate and clone a repository.  
-2. Build and compile your slides.  
-3. CRITICAL: name the deck `index.html`.  
-4. Commit and push to github.  
-5. On github, go to Settings -&gt; Pages.  
-6. Change "Branch" from none to master. Click save.  
-7. Find your slides at: `user_name.github.io/repo_name`
-
----
-# Useful Resources
-
-- Yihui Xie is the guru of all things markdown (and the author of the `knitr` package). His book [R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/)  is a great intro. See Chapters 4, 7, 9 for info on slide presentations.
-
-- Irene Vrbik also has an excellent [example slide deck](https://irene.vrbik.ok.ubc.ca/slides/NHSRxaringan.html#1). See her [markdown code on github](https://github.com/vrbiki/learning-xaringan/blob/master/NHSRxaringan.Rmd) to mimic all the little fancy things.
-
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
