--- a/index1.html
+++ b/index1.html
@@ -51,39 +51,34 @@ class: center, middle, inverse, title-slide
 
 - **Zillow Observed Rent Index** _(ZORI)_
   - Mean of listed rents that fall into the 35th to 65th percentile range for all homes and apartments in a given region.
-  
-
-&lt;img src="Zillow_Wordmark_Blue_RGB lrg.png" width="25%" style="display: block; margin: auto;" /&gt;
 
 ## Historical Wins by Year by MLB Team
 
 - Pulled from **Lahman Baseball Database** using r package "Lahman".
-- Tested wins variable **lagged by 1, 2, and 3 years** to understand postponed effects of success.
-
-&lt;img src="SABR_logo-square-700px.png" width="15%" style="display: block; margin: auto;" /&gt;
+- Tested wins variable **lagged by 1, 2, and 3 years** to understand postponed effects of success.]
 
 ---
 
 # After controlling for citywide rent prices, each additional win was associated with a **$2.25/month** rise in average rent price.
 
 .center.middle[.pull-right[ ## Results: Regression controlling for citywide rent
-<div id="zcxifcfgub" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#zcxifcfgub table {
+<div id="ageevntbxg" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#ageevntbxg table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#zcxifcfgub thead, #zcxifcfgub tbody, #zcxifcfgub tfoot, #zcxifcfgub tr, #zcxifcfgub td, #zcxifcfgub th {
+#ageevntbxg thead, #ageevntbxg tbody, #ageevntbxg tfoot, #ageevntbxg tr, #ageevntbxg td, #ageevntbxg th {
   border-style: none;
 }
 
-#zcxifcfgub p {
+#ageevntbxg p {
   margin: 0;
   padding: 0;
 }
 
-#zcxifcfgub .gt_table {
+#ageevntbxg .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -109,12 +104,12 @@ class: center, middle, inverse, title-slide
   border-left-color: #D3D3D3;
 }
 
-#zcxifcfgub .gt_caption {
+#ageevntbxg .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#zcxifcfgub .gt_title {
+#ageevntbxg .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -126,7 +121,7 @@ class: center, middle, inverse, title-slide
   border-bottom-width: 0;
 }
 
-#zcxifcfgub .gt_subtitle {
+#ageevntbxg .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -138,7 +133,7 @@ class: center, middle, inverse, title-slide
   border-top-width: 0;
 }
 
-#zcxifcfgub .gt_heading {
+#ageevntbxg .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -150,13 +145,13 @@ class: center, middle, inverse, title-slide
   border-right-color: #D3D3D3;
 }
 
-#zcxifcfgub .gt_bottom_border {
+#ageevntbxg .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#zcxifcfgub .gt_col_headings {
+#ageevntbxg .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -171,7 +166,7 @@ class: center, middle, inverse, title-slide
   border-right-color: #D3D3D3;
 }
 
-#zcxifcfgub .gt_col_heading {
+#ageevntbxg .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -191,7 +186,7 @@ class: center, middle, inverse, title-slide
   overflow-x: hidden;
 }
 
-#zcxifcfgub .gt_column_spanner_outer {
+#ageevntbxg .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -203,15 +198,15 @@ class: center, middle, inverse, title-slide
   padding-right: 4px;
 }
 
-#zcxifcfgub .gt_column_spanner_outer:first-child {
+#ageevntbxg .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#zcxifcfgub .gt_column_spanner_outer:last-child {
+#ageevntbxg .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#zcxifcfgub .gt_column_spanner {
+#ageevntbxg .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -223,11 +218,11 @@ class: center, middle, inverse, title-slide
   width: 100%;
 }
 
-#zcxifcfgub .gt_spanner_row {
+#ageevntbxg .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#zcxifcfgub .gt_group_heading {
+#ageevntbxg .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -253,7 +248,7 @@ class: center, middle, inverse, title-slide
   text-align: left;
 }
 
-#zcxifcfgub .gt_empty_group_heading {
+#ageevntbxg .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -268,15 +263,15 @@ class: center, middle, inverse, title-slide
   vertical-align: middle;
 }
 
-#zcxifcfgub .gt_from_md > :first-child {
+#ageevntbxg .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#zcxifcfgub .gt_from_md > :last-child {
+#ageevntbxg .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#zcxifcfgub .gt_row {
+#ageevntbxg .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -295,7 +290,7 @@ class: center, middle, inverse, title-slide
   overflow-x: hidden;
 }
 
-#zcxifcfgub .gt_stub {
+#ageevntbxg .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -308,7 +303,7 @@ class: center, middle, inverse, title-slide
   padding-right: 5px;
 }
 
-#zcxifcfgub .gt_stub_row_group {
+#ageevntbxg .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -322,15 +317,15 @@ class: center, middle, inverse, title-slide
   vertical-align: top;
 }
 
-#zcxifcfgub .gt_row_group_first td {
+#ageevntbxg .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#zcxifcfgub .gt_row_group_first th {
+#ageevntbxg .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#zcxifcfgub .gt_summary_row {
+#ageevntbxg .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -340,16 +335,16 @@ class: center, middle, inverse, title-slide
   padding-right: 5px;
 }
 
-#zcxifcfgub .gt_first_summary_row {
+#ageevntbxg .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#zcxifcfgub .gt_first_summary_row.thick {
+#ageevntbxg .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#zcxifcfgub .gt_last_summary_row {
+#ageevntbxg .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -359,7 +354,7 @@ class: center, middle, inverse, title-slide
   border-bottom-color: #D3D3D3;
 }
 
-#zcxifcfgub .gt_grand_summary_row {
+#ageevntbxg .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -369,7 +364,7 @@ class: center, middle, inverse, title-slide
   padding-right: 5px;
 }
 
-#zcxifcfgub .gt_first_grand_summary_row {
+#ageevntbxg .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -379,7 +374,7 @@ class: center, middle, inverse, title-slide
   border-top-color: #D3D3D3;
 }
 
-#zcxifcfgub .gt_last_grand_summary_row_top {
+#ageevntbxg .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -389,11 +384,11 @@ class: center, middle, inverse, title-slide
   border-bottom-color: #D3D3D3;
 }
 
-#zcxifcfgub .gt_striped {
+#ageevntbxg .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#zcxifcfgub .gt_table_body {
+#ageevntbxg .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -402,7 +397,7 @@ class: center, middle, inverse, title-slide
   border-bottom-color: #D3D3D3;
 }
 
-#zcxifcfgub .gt_footnotes {
+#ageevntbxg .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -416,7 +411,7 @@ class: center, middle, inverse, title-slide
   border-right-color: #D3D3D3;
 }
 
-#zcxifcfgub .gt_footnote {
+#ageevntbxg .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -425,7 +420,7 @@ class: center, middle, inverse, title-slide
   padding-right: 5px;
 }
 
-#zcxifcfgub .gt_sourcenotes {
+#ageevntbxg .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -439,7 +434,7 @@ class: center, middle, inverse, title-slide
   border-right-color: #D3D3D3;
 }
 
-#zcxifcfgub .gt_sourcenote {
+#ageevntbxg .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -447,72 +442,72 @@ class: center, middle, inverse, title-slide
   padding-right: 5px;
 }
 
-#zcxifcfgub .gt_left {
+#ageevntbxg .gt_left {
   text-align: left;
 }
 
-#zcxifcfgub .gt_center {
+#ageevntbxg .gt_center {
   text-align: center;
 }
 
-#zcxifcfgub .gt_right {
+#ageevntbxg .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#zcxifcfgub .gt_font_normal {
+#ageevntbxg .gt_font_normal {
   font-weight: normal;
 }
 
-#zcxifcfgub .gt_font_bold {
+#ageevntbxg .gt_font_bold {
   font-weight: bold;
 }
 
-#zcxifcfgub .gt_font_italic {
+#ageevntbxg .gt_font_italic {
   font-style: italic;
 }
 
-#zcxifcfgub .gt_super {
+#ageevntbxg .gt_super {
   font-size: 65%;
 }
 
-#zcxifcfgub .gt_footnote_marks {
+#ageevntbxg .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#zcxifcfgub .gt_asterisk {
+#ageevntbxg .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#zcxifcfgub .gt_indent_1 {
+#ageevntbxg .gt_indent_1 {
   text-indent: 5px;
 }
 
-#zcxifcfgub .gt_indent_2 {
+#ageevntbxg .gt_indent_2 {
   text-indent: 10px;
 }
 
-#zcxifcfgub .gt_indent_3 {
+#ageevntbxg .gt_indent_3 {
   text-indent: 15px;
 }
 
-#zcxifcfgub .gt_indent_4 {
+#ageevntbxg .gt_indent_4 {
   text-indent: 20px;
 }
 
-#zcxifcfgub .gt_indent_5 {
+#ageevntbxg .gt_indent_5 {
   text-indent: 25px;
 }
 
-#zcxifcfgub .katex-display {
+#ageevntbxg .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#zcxifcfgub div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#ageevntbxg div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
@@ -558,17 +553,13 @@ class: center, middle, inverse, title-slide
 ]
 ---
 
-# Some key takeaways 
+# Results varied significantly from team to team. 
 
-.pull-left[
-- Rent price as a potential confounding variable; **citywide rent variable added as control** to account for noise introduced by variations in rent price.
+.pull-left[- Limited availability of zip code specific rent price data makes granular evaluation difficult, but team-level data shows interesting trends.
 
 - **Strongest effect** was seen in the year immediately following a successful season.
-
-- **Limited availability of zip code specific rent price data** makes granular evaluation difficult, but team-level data shows interesting trends.
-
-- Results varied significantly from team to team; few teams independently reached statistical significant _(SDN, WAS, BAL, SDN)_
-
+  
+- Large variation in rent prices from city to city introduces noise; **citywide rent variable added as control** to account for differences in rental markets.
 ]
 
 
@@ -579,21 +570,35 @@ class: center, middle, inverse, title-slide
 
 ---
 
+
 # Potential Improvements for Future Study
 
 ## Limited availability of zip code level rent data
-- Analysis was conducted with only 149 observations, making findings difficult to verify on a team level.
-
-## Zip code not a perfect proxy for surrounding neighborhood
-- Future study could use coordinate data to establish standard geoperimeter around stadiums.]
-
-## Additional control variables may improve validity
-- Examples include population size/market size, urban development, etc.
-
-## Isolate home wins as explanatory variable
-- Are rent prices more responsive when a team is successful in their home stadium?
+- Analysis was conducted with only 149 observations, making findings difficult to verify on a city level
 
 ## 
+
+
+---
+# Hosting with ghpages
+
+You can host your slides remotely on github!
+
+1. Initiate and clone a repository.  
+2. Build and compile your slides.  
+3. CRITICAL: name the deck `index.html`.  
+4. Commit and push to github.  
+5. On github, go to Settings -&gt; Pages.  
+6. Change "Branch" from none to master. Click save.  
+7. Find your slides at: `user_name.github.io/repo_name`
+
+---
+# Useful Resources
+
+- Yihui Xie is the guru of all things markdown (and the author of the `knitr` package). His book [R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/)  is a great intro. See Chapters 4, 7, 9 for info on slide presentations.
+
+- Irene Vrbik also has an excellent [example slide deck](https://irene.vrbik.ok.ubc.ca/slides/NHSRxaringan.html#1). See her [markdown code on github](https://github.com/vrbiki/learning-xaringan/blob/master/NHSRxaringan.Rmd) to mimic all the little fancy things.
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
